--- a/css/main.css
+++ b/css/main.css
@@ -41,24 +41,16 @@ img {
 }
 
 .container {
-  width: 100%;
+  width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
 }
 
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    padding-left: 34px;
-    padding-right: 34px;
   }
 }
 
@@ -69,7 +61,10 @@ img {
 }
 
 .page-header {
-  background-color: var(--hero-bg-color);
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  padding-top: 37px;
 }
 
 .page-header_menu {
@@ -79,16 +74,9 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 6px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .page-header_menu {
-    padding-top: 35px;
-  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -96,6 +84,38 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+}
+
+.header-nav_link {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav_link:hover, .header-nav_link:focus {
+  color: var(--accent-color);
+}
+
+.header-logo {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 1.13;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    margin-right: 263px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    margin-right: 0px;
   }
 }
 
@@ -105,71 +125,97 @@ img {
 }
 
 .header-tablet-button_icon {
-  width: 4px;
-  height: 8px;
-  margin-left: 12px;
+  width: 6px;
+  height: 10px;
+  margin-left: 13px;
 }
 
-.header-nav_list {
+.header-nav {
   display: none;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.31;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: var(--first-text-color);
 }
 
 @media screen and (min-width: 1280px) {
-  .header-nav_list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+  .header-nav {
+    display: block;
   }
 }
 
-.nav-list_item:not(:last-child) {
-  margin-right: 50px;
+.burger-button_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-nav_list {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffff;
+  display: flex;
+}
+
+.header-nav_item:not(:last-child) {
+  margin-right: 35px;
 }
 
 .hero {
+  min-height: 502px;
   background-color: var(--hero-bg-color);
-  position: relative;
-  min-height: 446px;
 }
 
-.hero_word {
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 48px;
-  line-height: 0.95;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .hero {
+    min-height: 399px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    min-height: 665px;
+  }
+}
+
+.hero-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .hero-title_box {
-  position: absolute;
-  width: 218px;
-  top: 137px;
-  left: 20px;
+  width: 228px;
+  margin-top: 193px;
+  z-index: 3;
 }
 
 @media screen and (min-width: 768px) {
   .hero-title_box {
-    top: 15px;
-    left: 34px;
+    margin-top: 102px;
+    width: 161px;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-title_box {
+    margin-top: 171px;
+    width: 277px;
   }
 }
 
 .hero_title {
-  margin-bottom: 19px;
+  margin-bottom: 20px;
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
@@ -184,43 +230,230 @@ img {
   .hero_title {
     font-size: 22px;
     line-height: 1.13;
+    margin-bottom: 20px;
   }
 }
 
-.hero-numbers {
+@media screen and (min-width: 1280px) {
+  .hero_title {
+    font-size: 38px;
+    line-height: 1.15;
+  }
+}
+
+.hero_word {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 0.95;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 1280px) {
+  .hero_word {
+    font-size: 58px;
+    line-height: 0.89;
+  }
+}
+
+.hero-text {
   display: none;
+  width: 114px;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.5;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-text {
+    display: block;
+    width: 114px;
+    margin-top: 66px;
+    margin-left: 120px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-text {
+    display: block;
+    margin-top: 112px;
+    margin-left: 180px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.42;
+  }
 }
 
 .hero-ellipse {
+  min-width: 346px;
   position: absolute;
-  top: 27px;
-  width: 346px;
   height: 344px;
   background-color: var(--third-text-color);
   border-radius: 50%;
+  margin-top: 83px;
 }
 
-.icecream-mob_thumb {
+@media screen and (min-width: 768px) {
+  .hero-ellipse {
+    position: relative;
+    width: 324px;
+    height: 322px;
+    margin-top: 28px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-ellipse {
+    width: 538px;
+    height: 538px;
+    margin-top: 52px;
+  }
+}
+
+.hero-image_icecream {
   position: absolute;
-  left: 117px;
-  top: 36px;
-  height: 410px;
+  top: 9px;
+  left: 81px;
   width: 171px;
+  height: 410px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-image_icecream {
+    width: 143px;
+    height: 336px;
+    top: 35px;
+    left: 78px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-image_icecream {
+    width: 236px;
+    height: 557px;
+    top: 56px;
+    left: 119px;
+  }
+}
+
+.hero-numbers_box {
+  display: none;
+  width: 43px;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.25;
+  text-align: right;
+  color: var(--first-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-numbers_box {
+    display: block;
+    margin-top: 103px;
+    width: 43px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-numbers_box {
+    width: 74px;
+    margin-top: 171px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+
+.hero_numbers {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 1.14;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 1280px) {
+  .hero_numbers {
+    font-size: 46px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+  }
+}
+
+.cafes {
+  margin-bottom: 22px;
+}
+
+@media screen and (min-width: 1280px) {
+  .cafes {
+    margin-bottom: 32px;
+  }
+}
+
+.hero-image-milk {
+  display: none;
+  position: absolute;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-image-milk {
+    display: block;
+    width: 124px;
+    height: 126px;
+    bottom: 0px;
+    left: 0px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-image-milk {
+    display: block;
+    width: 188px;
+    height: 191px;
+    bottom: 0px;
+    left: -38px;
+  }
+}
+
+.hero-img_girl {
+  width: 168px;
+  height: 133px;
+  display: none;
+  position: absolute;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-img_girl {
+    display: block;
+    width: 168px;
+    height: 133px;
+    bottom: -49px;
+    right: -110px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-img_girl {
+    width: 293px;
+    height: 232px;
+    bottom: -75px;
+    right: -158px;
+  }
 }
 
 .page-header_burger {
   border: none;
-  background-color: #ffb8ca;
+  background-color: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -236,52 +469,123 @@ img {
 }
 
 .page-header_button {
+  display: none;
   min-width: 160px;
   height: 44px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  cursor: pointer;
-  background: #ffffff;
+  border: none;
   border-radius: 22px;
+  background-color: #fff;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.31;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #d41443;
-  border: none;
-  display: none;
+  cursor: pointer;
+  color: var(--accent-color);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
   .page-header_button {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: block;
   }
 }
 
-.button {
-  padding: 9px 14px;
-  border: none;
-  border-radius: 22px;
+.page-header_button:hover, .page-header_button:focus {
+  background-color: #ecebeb;
+}
+
+.products-button {
+  cursor: pointer;
+  min-width: 62px;
+  font-style: normal;
   font-weight: normal;
   font-size: 8px;
   line-height: 1.25;
-}
-
-.accent-button {
+  padding: 9px 14px;
   color: var(--first-text-color);
   background-color: var(--accent-color);
+  border: none;
+  border-radius: 20px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn {
+@media screen and (min-width: 1280px) {
+  .products-button {
+    min-width: 104px;
+    padding: 14px 21px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+
+.products-button:hover, .products-button:focus {
+  background-color: #c7133e;
+}
+
+.made-button {
+  cursor: pointer;
+  min-width: 82px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 10px;
+  padding: 9px 14px;
   color: var(--accent-color);
   background-color: var(--first-text-color);
+  border: none;
+  border-radius: 20px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1280px) {
+  .made-button {
+    min-width: 138px;
+    padding: 14px 21px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+
+.made-button:hover, .made-button:focus {
+  background-color: #ecebeb;
+}
+
+.hero-text_button {
+  display: none;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--first-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-text_button {
+    display: block;
+    margin-top: 7px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-text_button {
+    width: 26px;
+    height: 26px;
+    margin-top: 20px;
+  }
+}
+
+.arrow-btn {
+  width: 18px;
+  height: 18px;
+}
+
+@media screen and (min-width: 1280px) {
+  .arrow-btn {
+    width: 26px;
+    height: 26px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
