--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,56 +1,109 @@
 .page-header_burger {
   border: none;
-  background-color: #ffb8ca;
+  background-color: inherit;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
   @media screen and (min-width: 768px) {
     margin-right: 30px;
   }
-
   @media screen and (min-width: 1280px) {
     display: none;
   }
 }
 
 .page-header_button {
+  display: none;
   min-width: 160px;
   height: 44px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  cursor: pointer;
-  background: #ffffff;
+  border: none;
   border-radius: 22px;
+  background-color: #fff;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.31;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  color: #d41443;
-  border: none;
-  display: none;
+  cursor: pointer;
+  color: var(--accent-color);
   @media screen and (min-width: 768px) {
-    display: flex;
+    display: block;
+  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
   }
 }
-
-.button {
-  padding: 9px 14px;
-  border: none;
-  border-radius: 22px;
+.products-button {
+  cursor: pointer;
+  min-width: 62px;
+  font-style: normal;
   font-weight: normal;
   font-size: 8px;
   line-height: 1.25;
-}
-
-.accent-button {
+  padding: 9px 14px;
   color: var(--first-text-color);
   background-color: var(--accent-color);
+  border: none;
+  border-radius: 20px;
+  @media screen and (min-width: 1280px) {
+    min-width: 104px;
+    padding: 14px 21px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #c7133e;
+  }
 }
-
-.btn {
+.made-button {
+  cursor: pointer;
+  min-width: 82px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 10px;
+  padding: 9px 14px;
   color: var(--accent-color);
   background-color: var(--first-text-color);
+  border: none;
+  border-radius: 20px;
+  @media screen and (min-width: 1280px) {
+    min-width: 138px;
+    padding: 14px 21px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+.hero-text_button {
+  display: none;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+
+  border: none;
+  border-radius: 50%;
+  background-color: var(--first-text-color);
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-top: 7px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 26px;
+    height: 26px;
+    margin-top: 20px;
+  }
+}
+
+.arrow-btn {
+  width: 18px;
+  height: 18px;
+  @media screen and (min-width: 1280px) {
+    width: 26px;
+    height: 26px;
+  }
 }
