--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,49 @@
 .page-header {
-  background-color: var(--hero-bg-color);
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  padding-top: 37px;
 }
 .page-header_menu {
   display: flex;
   justify-content: space-between;
-  padding-top: 6px;
+
   align-items: center;
+
+  // width: 280px;
   @media screen and (min-width: 768px) {
-    padding-top: 35px;
+    // top: 35px;
+    // left: 34px;
+    // width: 700px;
+    // justify-content: space-between;
+    // z-index: 2;
   }
   @media screen and (min-width: 1280px) {
     justify-content: space-between;
+  }
+}
+
+.header-nav_link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.header-logo {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 1.13;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  @media screen and (min-width: 768px) {
+    margin-right: 263px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 0px;
   }
 }
 
@@ -18,28 +51,32 @@
   width: 20px;
   height: 12px;
 }
-
 .header-tablet-button_icon {
-  width: 4px;
-  height: 8px;
-  margin-left: 12px;
+  width: 6px;
+  height: 10px;
+  margin-left: 13px;
+}
+.header-nav {
+  display: none;
+  @media screen and (min-width: 1280px) {
+    display: block;
+  }
+}
+.burger-button_wrap {
+  display: flex;
+  align-items: center;
 }
 
 .header-nav_list {
-  display: none;
-
-  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.31;
+  display: flex;
   align-items: center;
-  color: var(--first-text-color);
-  @media screen and (min-width: 1280px) {
-    display: flex;
-    justify-content: space-between;
-  }
+  color: #ffffff;
+  display: flex;
 }
 
-.nav-list_item:not(:last-child) {
-  margin-right: 50px;
+.header-nav_item:not(:last-child) {
+  margin-right: 35px;
 }
