--- a/css/main.css
+++ b/css/main.css
@@ -495,6 +495,7 @@ img {
 }
 
 .products-button {
+  margin-right: 8px;
   cursor: pointer;
   min-width: 62px;
   font-style: normal;
@@ -512,6 +513,7 @@ img {
 
 @media screen and (min-width: 1280px) {
   .products-button {
+    margin-right: 15px;
     min-width: 104px;
     padding: 14px 21px;
     font-size: 14px;
