--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,6 +2,8 @@
 .hero {
   min-height: 502px;
   background-color: var(--hero-bg-color);
+  position: relative;
+  overflow: hidden;
 
   @media screen and (min-width: 768px) {
     min-height: 399px;
